# Haskell-Succinct-Vector-Library

./: .gitignore  .travis.yml  Poppy.hs  Poppy2.hs  Primitives.hs  default.nix  liquid.nix  liquid.yaml  poppy.hs  stack.yaml  succinct-vector.cabal
bench/: Main.hs
src/Succinct/: Vector.hs
src/Succinct/Vector/: Index.hs  Primitives.hs
test/: Main.hs
